# environment-aware-causal-qsar

./: AGENTS.md  INSTALL.md  README.md  environment.yml  pyproject.toml  requirements.txt
assets/: nature_palette.json  style_contract.txt
configs/: bbb_rules.yaml  ptp1b.yaml  ptp1b_smoke.yaml  splits.yaml
docs/: CHANGELOG_PIPELINE.md  STEP_CATALOG.md  TROUBLESHOOTING.md
ptp1b_causal_qsar/: __init__.py  cli.py  config.py  runner.py  steps_registry.py
ptp1b_causal_qsar/utils/: logging.py  provenance.py
scripts/: analyze_screening.py  applicability_domain.py  assemble_environments.py  attribution_gnn.py  bbb_rules.py  bbb_stratify.py  build_manuscript_pack.py  build_mmp_rules.py  chem_filters.py  chemotype_cluster.py  chemotype_summary.py  conformal.py  data_graph.py  diversity.py  embedding_extract.py  ensemble_utils.py  env_validation_report.py  evaluate_cross_endpoint.py  evaluate_model.py  evaluate_robustness.py  evaluate_runs.py  extract_chembl36_sqlite.py  extract_external_inhibition_from_chembl.py  extract_report.py  featurize.py  finetune_with_counterfactuals.py  fragment_analysis.py  generate_counterfactuals.py  generate_splits.py  infer.py  interpret_model.py  latent_env_discovery.py  liability_flags.py  library_clean.py  library_io.py  losses.py  make_paper_figures.py  make_splits.py  manuscript_mapping.py  match_screening_features.py  (+23 more)
scripts/manual/: _helpers.sh  run_all.sh  step01_extract.sh  step02_postprocess.sh  step03_assemble_environments.sh  step04_generate_splits.sh  step05_benchmark.sh  step06_train_causal.sh  step07_counterfactuals.sh  (+11 more)
(+1 files in other folders)
